fix upd Student